# cam-occ

./: AutomaticFeatureRecognition.md  CompileOnUbuntu.md  Main.md  OldScreenShots.md  ProjectHome.md  README.md  Screenshots.md
branches/andreas/: COMPILE.txt  COPYING.txt
branches/andreas/src/: ImportExport.cpp  ImportExport.h  basicCADmodule.cpp  basicCADmodule.h  cam-occ.pro  camTabs.cpp  camTabs.h  cuttingParameter.ui  cuttingParameter.ui.h  interactive.cpp  interactive.h  mainui.ui  mainui.ui.h  mill_tools.ui  mill_tools.ui.h  occObject.cpp  occview.h  pathAlgo.cpp  pathAlgo.h  persistence.cpp  persistence.h  positionWorkpieceDlg.ui  positionWorkpieceDlg.ui.h  rs274emc.cpp  rs274emc.h  run.sh  selectPatch.cpp  selectPatch.h
doc/: cleanup-doxy.sh
doc/doxygen/: set-svn-mime-types.sh
doc/doxygen/html/: _sh_heal_oper___change_orientation_8cpp.html  _sh_heal_oper___change_orientation_8cpp__incl.map  _sh_heal_oper___change_orientation_8cpp__incl.md5  _sh_heal_oper___change_orientation_8hxx.html  _sh_heal_oper___change_orientation_8hxx__dep__incl.map  _sh_heal_oper___change_orientation_8hxx__dep__incl.md5  _sh_heal_oper___change_orientation_8hxx__incl.md5  _sh_heal_oper___change_orientation_8hxx_source.html  _sh_heal_oper___close_contour_8cpp.html  _sh_heal_oper___close_contour_8cpp__incl.map  _sh_heal_oper___close_contour_8cpp__incl.md5  _sh_heal_oper___close_contour_8hxx.html  _sh_heal_oper___close_contour_8hxx__dep__incl.map  _sh_heal_oper___close_contour_8hxx__dep__incl.md5  _sh_heal_oper___close_contour_8hxx__incl.map  _sh_heal_oper___close_contour_8hxx__incl.md5  _sh_heal_oper___close_contour_8hxx_source.html  _sh_heal_oper___edge_divide_8cpp.html  _sh_heal_oper___edge_divide_8cpp__incl.map  _sh_heal_oper___edge_divide_8cpp__incl.md5  _sh_heal_oper___edge_divide_8hxx.html  _sh_heal_oper___edge_divide_8hxx__dep__incl.map  (+816 more)
trunk/: CMakeLists.txt  COMPILE.txt  COPYING  Doxyfile  README  USING.txt  boolOpTest.sh  build.sh  camocc.sh  camocc2.kdevelop  camocc2.kdevelop.pcs  debug.sh  lib  ubuntu.sh
trunk/cmake/Modules/: FindOpenCASCADE.cmake  lib-packages.sh
trunk/doc/: ideas
trunk/doc/doxygen/html/: a_sample_8cpp.html  a_sample_8cpp__incl.map  a_sample_8cpp__incl.md5  a_sample_8cpp_source.html  a_sample_8h.html  a_sample_8h__dep__incl.map  a_sample_8h__dep__incl.md5  a_sample_8h__incl.map  a_sample_8h__incl.md5  a_sample_8h_source.html  annotated.html  apttool_8cpp.html  apttool_8cpp_source.html  apttool_8h.html  apttool_8h_source.html  cam_8cpp.html  cam_8cpp__incl.map  cam_8cpp__incl.md5  cam_8cpp_source.html  cam_8h.html  cam_8h__dep__incl.map  cam_8h__dep__incl.md5  cam_8h__incl.map  cam_8h__incl.md5  cam_8h_source.html  canon_8cc.html  canon_8cc__incl.map  canon_8cc__incl.md5  canon_8cc_source.html  canon_8hh.html  canon_8hh__dep__incl.map  canon_8hh__dep__incl.md5  canon_8hh__incl.md5  canon_8hh_source.html  canon_line_8cc.html  canon_line_8cc__incl.map  canon_line_8cc__incl.md5  canon_line_8cc_source.html  canon_line_8hh.html  canon_line_8hh__dep__incl.map  (+781 more)
trunk/inc/: aSample.h  apttool.h  cam.h  gcode2Model.h  linesev.h  mrsev-abc.h  qocc.h  qoccapplication.h  qoccdocument.h  qoccharnesswindow.h  qoccinputoutput.h  qoccviewwidget.h  shapeInfo.h  shapeOffset.h  uiStuff.h
trunk/models/: Sphere.brep  face.ngc  handle.step  pockets.brep  swept.brep  trigger.step
trunk/ngc-in/: arc360test.ngc  arcs2.ngc  cds.ngc  face-rs.ngc  face-s.canon  face-s.ngc  face-sc-t1.canon  face-sc.canon  face-sc2.canon  face.ngc  m-arcspiral-s-incorrect.ngc  m-arcspiral-s.ngc  m-arcspiral.ngc  nas.ngc  segf.ngc  test-workpiece.ngc
trunk/resources/: ShHealingFullSet  ShHealingSub
trunk/src/: CMakeLists.txt  ImportExport.cpp  ImportExport.h  aSample.cpp  apttool.cpp  cam-occ.pro  cam.cpp  camTabs.cpp  camTabs.h  gcode2Model.cpp  gcode2Model3d.cpp  gcode2ModelGc.cpp  gcode2ModelUi.cpp  interactive.cpp  interactive.h  linesev.cpp  longMsgDlg.ui  main.cpp  mainui.ui  mainui.ui.h  mill_tools.ui  mill_tools.ui.h  mrsev-abc.cpp  occObject.cpp  occObject.h  occview.cpp  occview.h  pathAlgo.cpp  pathAlgo.h  persistence.cpp  persistence.h  positionWorkpieceDlg.ui  positionWorkpieceDlg.ui.h  qoccapplication.cpp  qoccinternal.h  qoccviewercontext.cpp  qoccviewwidget.cpp  rs274emc.cpp  rs274emc.h  run.sh  (+8 more)
trunk/src/cam/: aSample.cpp  cam.pro  gcode2Model3d.cpp  gcode2ModelUi.cpp  mrsev-abc.cpp  shapeInfo.cpp  shapeOffset.cpp  shapeOffset.h  uiStuff.cpp  uiStuff.h
trunk/src/contrib/: CMakeLists.txt  contrib.pro
trunk/src/contrib/salome/: CMakeLists.txt  ShHealOper_ChangeOrientation.hxx  ShHealOper_CloseContour.hxx  ShHealOper_EdgeDivide.hxx  ShHealOper_FillHoles.cpp  ShHealOper_FillHoles.hxx  ShHealOper_RemoveFace.hxx  ShHealOper_RemoveInternalWires.hxx  ShHealOper_Sewing.hxx  ShHealOper_ShapeProcess.hxx  ShHealOper_SplitCurve2d.hxx  ShHealOper_SplitCurve3d.hxx  ShHealOper_Tool.hxx  ShHealing  ShHealingFullSet  salome.pro  source.txt
trunk/src/g2m/: CMakeLists.txt  arch-notes  canon.cc  canon.hh  canonLine.cc  canonLine.hh  canonMotion.cc  canonMotion.hh  canonMotionless.cc  canonMotionless.hh  dispShape.cc  dispShape.hh  g2m.cc  g2m.hh  g2m.pro  g2m.xmi  g2m_threaded.cc  g2m_threaded.hh  helicalMotion.cc  helicalMotion.hh  linearMotion.cc  linearMotion.hh  machineStatus.cc  machineStatus.hh  silhouette.cc  silhouette.hh  tmpmain.cc  tool.cc  tool.hh
trunk/src/inc/: mrsev-abc.h  qoccviewercontext.h
trunk/src/intf/: intf.pro  link.cc  link.hh  lnk.cc  lnk.hh  ptr.cc  ptr.hh  uio.cc  uio.hh
trunk/src/qocc/: CMakeLists.txt  lnk.cc  lnk.hh  main.cpp  qocc.h  qocc.pro  qoccapplication.cpp  qoccdocument.cpp  qoccharnesswindow.cpp  qoccharnesswindow.h  qoccinputoutput.cpp  qoccmakebottle.cpp  qoccviewercontext.cpp  qoccviewercontext.h  qoccviewwidget.cpp  qoccviewwidget.h
trunk/src/uio/: CMakeLists.txt  dispShape.hh  log.hh  nanotimer.cc  nanotimer.hh  tst.cc  tst.hh  uio.cc  uio.hh  uio.pro
trunk/templates/: h
wiki/: AutomaticFeatureRecognition.wiki  CompileOnUbuntu.wiki  Main.wiki  OldScreenShots.wiki  PageName.wiki  README.wiki  Screenshots.wiki
